# choreopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  crd.py  resources.py
